# Audio-Effects

./: .gitignore  .gitmodules  compile_commands.json
Chorus/: CMakeLists.txt
Chorus/.github/: copilot-instructions.md
Chorus/Source/: AppSettingsPanel.cpp  AppSettingsPanel.h  ChorusFooterComponent.cpp  ChorusFooterComponent.h  ChorusHeaderComponent.cpp  ChorusHeaderComponent.h  ChorusMidiCcSettingsPanel.cpp  ChorusMidiCcSettingsPanel.h  CompressorCurveComponent.cpp  CompressorCurveComponent.h  CompressorKnee.h  MinibussChorusEngine.cpp  MinibussChorusEngine.h  MonoChorusProcessor.cpp  MonoChorusProcessor.h  NoiseGateSettingsPanel.cpp  NoiseGateSettingsPanel.h  Phase90Processor.cpp  Phase90Processor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  QPitchDetector.h  SpectrumAnalyzer.h  SpectrumCurveComponent.cpp  SpectrumCurveComponent.h  SpectrumOverlayComponent.cpp  SpectrumOverlayComponent.h  StandaloneMain.cpp  TunerOverlayComponent.cpp  TunerOverlayComponent.h
Compressor-Expander/: CMakeLists.txt
Compressor-Expander/Source/: CompressorCurveComponent.cpp  CompressorCurveComponent.h  CompressorKnee.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Delay/: CMakeLists.txt
Delay/Products/: Delay.maxpat
Delay/Source/: DelayFooterComponent.cpp  DelayFooterComponent.h  DelayHeaderComponent.cpp  DelayHeaderComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StandaloneMain.cpp
Distortion/: CMakeLists.txt
Distortion/Source/: DistortionFooterComponent.cpp  DistortionFooterComponent.h  DistortionHeaderComponent.cpp  DistortionHeaderComponent.h  DistortionStartupProgressOverlay.cpp  DistortionStartupProgressOverlay.h  PluginEditor.cpp  PluginEditor.h  PluginParameter.h  PluginProcessor.cpp  PluginProcessor.h  StandaloneMain.cpp
ParametericEQ/: .gitignore  CMakeLists.txt
ParametericEQ/Source/: EQCurveComponent.cpp  EQCurveComponent.h  ParametricEQFooterComponent.cpp  ParametricEQFooterComponent.h  ParametricEQHeaderComponent.cpp  ParametricEQHeaderComponent.h  PluginEditor.cpp  PluginEditor.h  PluginParameter.h  PluginProcessor.cpp  PluginProcessor.h  StandaloneMain.cpp
Phaser/: CMakeLists.txt
Phaser/Source/: PhaserFooterComponent.cpp  PhaserFooterComponent.h  PhaserHeaderComponent.cpp  PhaserHeaderComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StandaloneMain.cpp
Reverb/: CMakeLists.txt
Reverb/Source/: PluginEditor.cpp  PluginEditor.h  PluginParameter.h  PluginProcessor.cpp  PluginProcessor.h  ReverbFooterComponent.cpp  ReverbFooterComponent.h  ReverbHeaderComponent.cpp  ReverbHeaderComponent.h  StandaloneMain.cpp
